--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.FirstFragment">
+        tools:context=".fragments.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -13,12 +13,11 @@
             android:layout_marginBottom="100dp"
             android:padding="16dp">
 
-
         <TextView
-                android:text="Usuario"
+                android:text="Correo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvUser"
+                android:id="@+id/tvEmail"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/btnRegister"
                 app:layout_constraintEnd_toStartOf="@+id/guideline" />
@@ -28,8 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvPassword"
-                app:layout_constraintEnd_toEndOf="@+id/tvUser"
-                app:layout_constraintTop_toBottomOf="@+id/tvUser"
+                app:layout_constraintEnd_toEndOf="@+id/tvEmail"
+                app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                 android:layout_marginTop="20dp" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -45,11 +44,11 @@
                 android:inputType="text"
                 android:text=""
                 android:ems="10"
-                android:id="@+id/editTextUser"
-                app:layout_constraintBottom_toBottomOf="@+id/tvUser"
-                app:layout_constraintStart_toEndOf="@+id/tvUser"
+                android:id="@+id/editTextEmail"
+                app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
+                app:layout_constraintStart_toEndOf="@+id/tvEmail"
                 android:textSize="12sp"
-                app:layout_constraintTop_toTopOf="@+id/tvUser"
+                app:layout_constraintTop_toTopOf="@+id/tvEmail"
                 android:layout_marginStart="20dp" />
 
         <EditText
@@ -84,7 +83,6 @@
                 android:layout_marginTop="35dp"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
