--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,6 +12,14 @@
         <action
                 android:id="@+id/action_LoginFragment_to_RegisterFragment"
                 app:destination="@id/RegisterFragment" />
+        <argument
+                android:name="email"
+                app:argType="string"
+                app:nullable="true" />
+        <argument
+                android:name="password"
+                app:argType="string"
+                app:nullable="true" />
     </fragment>
     <fragment
             android:id="@+id/RegisterFragment"
