--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
-            android:id="@+id/nav_host_fragment_content_main"
+            android:id="@+id/nav_host_fragment_content_main2"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -15,5 +15,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
+            app:navGraph="@navigation/nav_graph2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
