--- a/app/src/main/res/navigation/nav_graph2.xml
+++ b/app/src/main/res/navigation/nav_graph2.xml
@@ -8,7 +8,7 @@
     <fragment
             android:id="@+id/FirstFragment"
             android:name="com.example.evaluablet3.fragments.FirstFragment"
-            android:label="@string/first_fragment_label"
+            android:label="Ligas"
             tools:layout="@layout/fragment_first">
 
         <action
