--- a/app/src/main/res/layout/item_league_recycler.xml
+++ b/app/src/main/res/layout/item_league_recycler.xml
@@ -19,7 +19,7 @@
             android:layout_width="38dp"
             android:layout_height="33dp"
             app:srcCompat="@drawable/arrow3"
-            android:id="@+id/imageView2"
+            android:id="@+id/btnSeeLeague"
             app:layout_constraintStart_toEndOf="@+id/leagueName"
             app:layout_constraintTop_toTopOf="parent"
             android:paddingBottom="10dp"
