add maxwidth for team name

--- a/app/src/main/res/layout/item_team_recycler.xml
+++ b/app/src/main/res/layout/item_team_recycler.xml
@@ -7,9 +7,10 @@
         android:paddingBottom="10dp">
 
     <TextView
-            android:text="Manchester City"
+            android:text="Central Cordoba de Santiago del Estero"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="250dp"
             android:id="@+id/teamName"
             app:layout_constraintTop_toTopOf="@+id/teamImg"
             android:textSize="20sp"
@@ -27,11 +28,11 @@
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/btn_star_big_on"
+            app:srcCompat="@android:drawable/btn_star_big_off"
             android:id="@+id/btnAddToFavs"
             android:backgroundTint="#00FFFFFF"
             app:layout_constraintStart_toEndOf="@+id/teamName"
             app:layout_constraintBottom_toBottomOf="@+id/teamName"
-            app:layout_constraintTop_toTopOf="@+id/teamName"/>
+            app:layout_constraintTop_toTopOf="@+id/teamName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
