--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context="com.example.evaluablet3.activities.MainActivity">
+        tools:context="com.example.evaluablet3.activities.LeaguesActivity">
     <item
             android:id="@+id/action_favs"
             android:title="@string/action_favs"
