add favs fragment

--- a/app/src/main/res/layout/activity_leagues.xml
+++ b/app/src/main/res/layout/activity_leagues.xml
@@ -20,6 +20,8 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_leagues" />
+    <include
+            layout="@layout/content_leagues"
+            android:id="@+id/main_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
